Fix button-click visual feedback border being partially cut off

--- a/app/grandchallenge/core/static/css/core.css
+++ b/app/grandchallenge/core/static/css/core.css
@@ -241,6 +241,10 @@ ul.socialaccount_providers > li {
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .1);
 }
 
+.btn {
+    margin: 0.25rem;
+}
+
 .color-box {
     display: inline-block;
     border: black solid 1px;
